improve swagger docs generation
